# os

./: .gitignore  .shellcheckrc  AGENTS.md  README.md  build.zig  build.zig.zon  limine.conf  linker.ld  mise.toml  pyproject.toml
common/: acpi_sig.zig  bytes.zig  hex.zig  ipv4_addr.zig  mac.zig  path.zig  string.zig  tap.zig  time_unix.zig  view.zig
common/abi/: fs.zig  hw.zig  mman.zig  net.zig  signal.zig  syscall.zig
config/: qemu-uefi.ini  qemu.ini
docs/: syscall-abi.md
docs/roadmap/: 00-foundation.md  01-page-tables-and-higher-half-kernel.md  02-physical-and-virtual-memory.md  03-kernel-runtime.md  04-userspace.md  05-io-stack.md  06-smp-and-gui.md  06-testing-and-quality.md  07-copy-on-write-fork.md  08-process-environment.md  09-virtual-memory-and-page-cache.md  10-filesystems-ext2-tmpfs.md  10-mount-and-tmpfs.md  11-procfs-and-sysfs.md  12-preemptive-scheduling.md  13-smp.md  14-gui.md  README.md
kernel/: freestanding_std.zig  hal.zig  kernel.zig  main.zig  panic.zig  runtime.zig
kernel/acpi/: access.zig  madt.zig  power.zig
kernel/boot/: limine.zig  tap_suite.zig
kernel/drivers/: block.zig  manager.zig  net_device.zig  pci.zig  tty.zig  virtio_blk.zig  virtio_descriptor.zig  virtio_net.zig  virtio_pci.zig  virtio_queue.zig  (+1 more)
scripts/: build-iso.sh  build_iso.py  common.py  create-disk.sh  create_disk.py  get-limine.sh  limine.py  qemu.py  run-qemu.sh  test-shell.sh
src/: boot_info.zig  kernel.zig  main.zig  serial.zig  uefi.zig
test/: memory_map_test.zig
userspace/: freestanding_std.zig  libc.zig  linker.ld  std_root.zig  syscall.zig
(+258 files in other folders)
