[project]
name = "os-integration-tests"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
build-iso = "scripts.build_iso:main"
create-disk = "scripts.create_disk:main"
run-qemu = "scripts.qemu:main"

[dependency-groups]
build = [
    "pycdlib>=1.16.0",
    "pyfatfs>=1.1.0",
]
dev = [
    "pexpect>=4.9.0",
    "pytest>=9.1.1",
    "qemu-qmp>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["test/integration"]
addopts = "-ra"
